fix explanation image sticking out on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -110,10 +110,6 @@ ul.selectpicker {
   width: 100%;
 }
 
-.explanation-image {
-  margin: 30px 20px 0 0;
-}
-
 .toggle-buttons {
   padding: 0px 0px 0px 17px;
 }
