--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -80,6 +80,10 @@
     padding-left: 0 !important;
   }
 
+  .explanation-image {
+    margin: 30px 20px 0 0;
+  }
+
   .segment {
     button {
       margin-top: 28px !important;
@@ -172,6 +176,10 @@
   .to-airport {
     margin-top: 15px;
     padding-left: 0 !important;
+  }
+
+  .explanation-image {
+    margin: 30px 20px 0 0;
   }
 
   .segment {
